--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cacheable-lookup": "^5.0.4",
     "cacheable-request": "^10.2.7",
     "clone-response": "^1.0.3",
+    "danfojs": "^1.1.2",
     "debug": "^4.3.4",
     "decompress-response": "^6.0.0",
     "defer-to-connect": "^2.0.1",
